--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-save-state",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Hiroyuki ANAI <pirosikick@gmail.com>",
   "dependencies": {
     "lodash": "^3.10.1"
@@ -14,6 +14,7 @@
     "eslint": "^1.8.0",
     "fixpack": "^2.2.0",
     "mocha": "^2.3.3",
+    "redux": "^3.0.4",
     "sinon": "^1.17.2"
   },
   "files": [
