--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "redux-save-state",
-  "version": "0.0.2",
+  "discription": "A redux middleware which saves a snapshot of the state to localStorage",
+  "homepage": "https://github.com/pirosikick/redux-save-state",
+  "keywords": ["flux", "redux", "redux-middleware", "middleware"],
+  "version": "1.0.0",
   "author": "Hiroyuki ANAI <pirosikick@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pirosikick/redux-save-state.git"
+  },
   "dependencies": {
     "lodash": "^3.10.1"
   },
